packages/kit/test/apps/basics/src/routes/load/invalidation/during-navigation/[slug]/+page.svelte
<script>
	let { data } = $props();
</script>

<p data-testid="scores">{data.scores}</p>
